@@ -68,27 +68,57 @@ public class ComprarCarro extends Funcionalidad {
 		
 	}
 	private Vehiculo escogerVehiculo(Cliente cliente) {
+		if (cliente.getVehiculos().size() == 0) {
+			boolean e = Consola.pedirBoolean("Usted no tiene vehiculos registrados para vender, ¿desea registrar e ingresar su vehiculo?");
+			if (e) {
+				Vehiculo vehiculoRegistrado = registrarVehiculo(cliente);
+				String marca = vehiculoRegistrado.getMarca().toUpperCase();
+				if (vehiculoRegistrado != null && (marca=="TOYOTA" || marca=="RENAULT"|| marca=="CHEVROLET" || marca=="KIA" || marca== "MAZDA")) {
+					ingresarVehiculo(cliente, vehiculoRegistrado);
+				}
+				else if (vehiculoRegistrado != null){
+					System.out.println("La marca seleccionada no es válida para venta de carro");
+				}
+			} else {
+					return null;
+			}
+		}
 		// lista para obtener solo los carros
 		List<Vehiculo> carros = new ArrayList<>(cliente.getVehiculos().stream().filter(vehiculo -> vehiculo instanceof Carro).collect(Collectors.toList()));
-		List<String> placasCarros = new ArrayList<>(carros.stream().map(Vehiculo::getPlaca).toList());
-		
-		//vehiculos.add("Volver al menú principal");
+		List<Vehiculo> carrosMarcas = new ArrayList<>(carros.stream().filter(vehiculo -> (((Carro)vehiculo).getMarca()=="TOYOTA" || ((Carro)vehiculo).getMarca()=="RENAULT"|| ((Carro)vehiculo).getMarca()=="CHEVROLET" || ((Carro)vehiculo).getMarca()=="KIA" || ((Carro)vehiculo).getMarca()== "MAZDA")).collect(Collectors.toList()));
+		if (carrosMarcas.size() == 0) {
+			boolean e = Consola.pedirBoolean("Usted no tiene vehiculos registrados con las marcas aceptadas por el parqueadero para venta, ¿desea registrar e ingresar su vehiculo?");
+			if (e) {
+				Vehiculo vehiculoRegistrado = registrarVehiculo(cliente);
+				String marca = vehiculoRegistrado.getMarca().toUpperCase();
+				if (vehiculoRegistrado != null && (marca=="TOYOTA" || marca=="RENAULT"|| marca=="CHEVROLET" || marca=="KIA" || marca== "MAZDA")) {
+					ingresarVehiculo(cliente, vehiculoRegistrado);
+				}
+				else if (vehiculoRegistrado != null){
+					System.out.println("La marca seleccionada no es válida para venta de carro");
+				}
+			} else {
+					return null;
+			}
+		}
+		List<String> placasCarros = new ArrayList<>(carrosMarcas.stream().map(Vehiculo::getPlaca).toList());
+		placasCarros.add("Volver al menú principal");
 		
 		int opcionEscogida = Consola.pedirEleccion("Escoja el vehículo que desea vender ", placasCarros);
 		
 		//Se verifica si desea volver al menú principal, o si el vehiculo se encuentra enparqueadero
 		
-		if (opcionEscogida == carros.size() - 1) { //si desea volver se retorna null
+		if (opcionEscogida == carrosMarcas.size() - 1) { //si desea volver se retorna null
 			return null;
 		}
 		else { //cuando se escoge un vehiculo
-			Vehiculo vehiculo = cliente.getVehiculos().get(opcionEscogida);
+			Vehiculo vehiculo = carrosMarcas.get(opcionEscogida);
 			if (!vehiculo.estaParqueado()) { // si el vehículo no esta parqueado se informa y se pide ingresar el vehículo 
 				boolean elec = Consola.pedirBoolean("El vehiculo no se encuentra en el parqueadero, ¿desea ingresarlo?");
 				if (elec == false) { // si se escoge no se vuelve al menu del metodo
 					return escogerVehiculo(cliente); 
 				}
-				else { // si se escoge si se llama la funcionalidad ingresar vehiculo y se ingresa al taller
+				else { // si se escoge si se llama la funcionalidad ingresar vehiculo y se ingresa al parqueadero
 					ingresarVehiculo(cliente, vehiculo);
 					return vehiculo;
 				}
